--- a/package.json
+++ b/package.json
@@ -18,13 +18,23 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "reason-react": ">=0.4.0"
+    "reason-react": ">=0.4.0",
+    "@glennsl/bs-json": "^3.0.0",
+    "bs-fetch": "^0.3.1",
+    "bs-json": "^1.0.1",
+    "compression": "^1.7.3",
+    "express": "^4.16.4",
+    "helmet": "^3.15.0"
   },
   "devDependencies": {
     "bs-platform": "^4.0.18",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "@glennsl/bs-jest": "^0.4.7",
+    "bsb-js": "^1.1.7",
+    "concurrently": "^4.1.0",
+    "parcel-bundler": "^1.11.0"
   }
 }
