feat: input and header

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -18,7 +18,7 @@
   "reason": {
     "react-jsx": 2
   },
-  "bs-dependencies": ["reason-react", "bs-fetch", "@glennsl/bs-json"],
+  "bs-dependencies": ["reason-react", "bs-fetch", "@glennsl/bs-json", "bs-css"],
   "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "warnings": {
     "error": "+101"
