--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "watch": "concurrently -k -n bsb,jest -c magenta,green,blue \"bsb -make-world -w\" \"jest --watch\" \"parcel watch index.html\"",
     "byte": "bsb -backend",
     "test": "npm run build && jest --coverage",
-    "parcel": "parcel src/index.html"
+    "parcel": "parcel src/index.html",
+    "webpack": "webpack -w",
+    "webpack:production": "NODE_ENV=production webpack",
+    "server": "webpack-dev-server"
   },
   "keywords": [
     "BuckleScript"
@@ -32,6 +35,10 @@
     "bs-platform": "^4.0.18",
     "bsb-js": "^1.1.7",
     "concurrently": "^4.1.0",
-    "parcel-bundler": "^1.11.0"
+    "parcel-bundler": "^1.11.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.8"
   }
 }
